# transcriber

./: .gitignore  CLAUDE.md  QUICK_START.md  README.md  chat.py  demo.py  devbox.json  pyproject.toml  pytest.ini  run_transcriber.py  voice_demo.py
.claude/: settings.local.json
docs/: API.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  CONTRIBUTING.md  CURRENT_STATUS.md  INSTALLATION_GUIDE.md  PERFORMANCE.md  PERFORMANCE_TESTING_SUMMARY.md  PROJECT_PLAN.md  QUERY_COMMAND_IMPLEMENTATION_PLAN.md  REQUIREMENTS.md  TESTING.md  TOOLS.md  TOOL_DEVELOPMENT.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  USER_GUIDE.md  VOICE_STATUS.md  performance-optimization.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  query-feature-context.md  systemPatterns.md  techContext.md
tests/: conftest.py  run_performance_tests.py  test_performance_system.py  test_session_management.py
tests/integration/: test_voice_pipeline.py  test_voice_pipeline_fixed.py
tests/performance/: README.md  __init__.py  test_benchmarks.py  test_config.py  test_simple.py  test_stress.py
tests/unit/: test_audio_vad.py  test_config.py  test_session_models.py  test_tools_base.py  test_tools_registry.py
transcriber/: __init__.py  __main__.py  config.py  main.py  pipeline.py  simple_voice.py  voice_interface.py
transcriber/agent/: core.py  llm.py  query_agent.py  text_agent.py
transcriber/audio/: __init__.py  capture.py  devices.py  echo_cancellation.py  edge_tts.py  gtts_tts.py  mock_stt.py  output.py  playback.py  recorder.py  simple_tts.py  stt.py  tts.py  vad.py  whisper_stt.py
transcriber/memory/: __init__.py  embeddings.py  manager.py  models.py  storage.py
transcriber/performance/: __init__.py  benchmarks.py  integration.py  monitor.py  optimizer.py  profiler.py
transcriber/session/: __init__.py  manager.py  models.py  storage.py
transcriber/tools/: __init__.py  base.py  registry.py
transcriber/tools/builtin/: __init__.py  calculator.py  file_ops.py  system_info.py  text_processing.py
transcriber/utils/: __init__.py  logging.py
